libs/modkit-db/tests/ui/fail/unscoped_query_execution.stderr
error[E0599]: no method named `all` found for struct `SecureSelect<test_entity::Entity, Unscoped>` in the current scope
  --> tests/ui/fail/unscoped_query_execution.rs:35:43
   |
35 |     let _result = Entity::find().secure().all(conn).await;
   |                                           ^^^ method not found in `SecureSelect<test_entity::Entity, Unscoped>`
   |
   = note: the method was found for `SecureSelect<E, Scoped>`
